--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.17",
+        "@types/lodash-es": "^4.17.12",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.553.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
