--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "book-manager",
+    "name": "book-manager-client",
     "private": true,
     "version": "0.1.0",
     "type": "module",
